--- a/config.org
+++ b/config.org
@@ -45,7 +45,10 @@
 ;; ----------------------------
 
 ;; ----- Fonts
-(add-to-list 'default-frame-alist '(font . "Hack Nerd Font 18"))
+(if (string-equal system-type "darwin")
+	(add-to-list 'default-frame-alist '(font . "Hack Nerd Font 18"))
+	(add-to-list 'default-frame-alist '(font . "Hack Nerd Font 22")))
+
 (use-package all-the-icons
   :if (display-graphic-p)
   :ensure t)
